# LenovoLegion7iLinux

./: .gitignore  AppImageSpec.yml  CHANGELOG.md  CONTRIBUTORS.md  CRITICAL_BUGS_FOUND.md  DESKTOP_VALIDATION_FIXES.md  ELITE_CODEBASE_REVIEW.md  ELITE_KERNEL_ANALYSIS.md  ELITE_SECURITY_AUDIT.md  ENHANCED_KERNEL_MODULE_GUIDE.md  ENHANCED_legion_laptop.c  Elite_MultiAgentic_SubAgent.md  GUI_TROUBLESHOOTING_GUIDE.md  INSTALL.Linux.md  INSTALL.Ubuntu.md  LICENSE  LINUX_WINDOWS_FEATURE_COMPARISON.md  LenovoLegionToolkit.sln  Makefile  NEW-REPO-SETUP.md  OPTIMIZED_App.axaml.cs  OPTIMIZED_ConfigurationService.cs  OPTIMIZED_GUI_DEBUG.md  OPTIMIZED_LinuxBatteryService.cs  OPTIMIZED_LinuxThermalService.cs  OPTIMIZED_Logger.cs  OPTIMIZED_Program.cs  OPTIMIZED_ServiceCollectionExtensions.cs  PRODUCTION-BUILD.md  PRODUCTION_OPTIMIZATION_SUMMARY.md  README-LINUX.md  README-TEST-PACKAGE.md  README.Linux.md  README.md  RELEASE_NOTES_v6.0.0.md  WINDOWS_SETUP_REQUIREMENTS_v6.0.0.md  apply-libicu-fix.sh  battery-detection-fix.cs  battery-error-handling-fix.cs  build-test-package.sh  (+16 more)
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-linux.yml
Documentation/: legion-toolkit.1
InnoDependencies/: install_dotnet.iss
LenovoLegion/: LICENSE
LenovoLegion/linux_core/: build_linux_complete.sh  pyproject.toml  requirements.txt  run_tests.py  setup.py
LenovoLegion/linux_core/ai/: ai_controller.py
LenovoLegion/linux_core/automation/: auto_listeners.py
LenovoLegion/linux_core/cli/: legion_toolkit_cli.py
LenovoLegion/linux_core/features/: battery_manager.py  display_manager.py
LenovoLegion/linux_core/gui/: legion_toolkit_gui.py
LenovoLegion/linux_core/hardware/: gpu_controller.py  rgb_controller.py
LenovoLegion/linux_core/kernel_module/: Makefile  dkms.conf  legion_laptop_16irx9.c
LenovoLegion/linux_core/kernel_module/scripts/: install_kernel_module.sh  post-install.sh  post-remove.sh
LenovoLegion/linux_core/legion_toolkit/: __init__.py  config.py
LenovoLegion/linux_core/tests/: __init__.py  conftest.py  test_config.py  test_hardware.py
LenovoLegion/linux_gui/: legion_toolkit_linux.py
LenovoLegionToolkit.Avalonia/: App.axaml  App.axaml.cs  BUILD-INSTRUCTIONS.md  BUILD-README.md  LenovoLegionToolkit.Avalonia.csproj  Program.cs  README.md  ViewLocator.cs  build-linux-complete.sh  build-linux.sh  build-minimal.sh  build.sh  install-linux.sh  runtimeconfig.template.json
LenovoLegionToolkit.Avalonia.Tests/: LenovoLegionToolkit.Avalonia.Tests.csproj
LenovoLegionToolkit.Avalonia/CLI/: AutomationCommands.cs  CliClient.cs  CommandLineInterface.cs
LenovoLegionToolkit.Avalonia/Controls/: CircularProgressBar.axaml  CircularProgressBar.axaml.cs  FeatureCardControl.axaml  FeatureCardControl.axaml.cs  NavigationMenu.axaml  NavigationMenu.axaml.cs  StatusIndicator.axaml  StatusIndicator.axaml.cs
LenovoLegionToolkit.Avalonia/Converters/: BatteryHealthToColorConverter.cs  BatteryLevelToColorConverter.cs  BoolToStringConverter.cs  BoolToVisibilityConverter.cs  ColorToBrushConverter.cs  ColorToHexConverter.cs  DisplayTypeConverter.cs  EffectHasSpeedConverter.cs  EnumToStringConverter.cs  EqualityConverter.cs  IsNotNullConverter.cs  MultiValueEqualityConverter.cs  NavigationItemSelectedConverter.cs  NotEqualConverter.cs  PercentageConverter.cs  PowerModeDescriptionConverter.cs  RpmToPercentConverter.cs  TemperatureConverter.cs  TemperatureToColorConverter.cs
LenovoLegionToolkit.Avalonia/IPC/: IpcMessage.cs  IpcServer.cs
LenovoLegionToolkit.Avalonia/Models/: AutomationModels.cs  BatteryInfo.cs  CustomPowerModeSettings.cs  DisplayConfiguration.cs  FeatureCard.cs  GpuInfo.cs  GpuMode.cs  HardwareInfo.cs  PowerMode.cs  RgbKeyboard.cs  ThermalInfo.cs
LenovoLegionToolkit.Avalonia/Resources/: legion-toolkit.desktop
LenovoLegionToolkit.Avalonia/Services/: FileSystemService.cs  ProcessRunner.cs  ServiceCollectionExtensions.cs
LenovoLegionToolkit.Avalonia/Settings/: AppSettings.cs  SettingsService.cs
LenovoLegionToolkit.Avalonia/Styles/: DashboardStyles.axaml
LenovoLegionToolkit.CLI/: LenovoLegionToolkit.CLI.csproj
LenovoLegionToolkit.CLI.Lib/: LenovoLegionToolkit.CLI.Lib.csproj
LenovoLegionToolkit.Lib/: IoCModule.cs  LenovoLegionToolkit.Lib.csproj  Structs.cs
LenovoLegionToolkit.Lib.Automation/: LenovoLegionToolkit.Lib.Automation.csproj
LenovoLegionToolkit.Lib.Macro/: LenovoLegionToolkit.Lib.Macro.csproj
LenovoLegionToolkit.WPF/: Constants.cs  LenovoLegionToolkit.WPF.csproj
Scripts/: build-appimage.sh  build-deb.sh  build-rpm.sh  build-ubuntu-package.sh  clean-git-history.sh  create-appimage.sh  create-packages.sh  generate-icons.sh  install.sh  legion-toolkit-system.service  legion-toolkit.service  push-clean-to-github.sh  push-to-github.sh  setup-ppa.sh  ubuntu-installer.sh  uninstall.sh
debian/: changelog  control  copyright  rules
kernel-module/: Makefile  README.md  build-kernel-module.sh  dkms.conf  enhanced_legion_laptop.c  test-compatibility.sh
rpm/: legion-toolkit.spec
snap/: snapcraft.yaml
(+84 files in other folders)
